--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpellChecker</title>
+    <title>WordMatcher</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
 </head>
 
 <body>
     <header>
-        SpellChecker
+        WordMatcher
     </header>
 
     <main>
@@ -26,7 +26,7 @@
         <div class="info container">
             <h2>Explaination</h2>
             <p>
-                This is a simple spell checker made using Levenshtein distance algorithm.
+                This is a simple word matcher made using Levenshtein distance algorithm.
                 Levenshtein distance (or commonly known as "Edit distance") is the minimum
                 number of edits necessary for a given string to mach another given string.
                 In this application the Levenshtein distance between the input and a list
@@ -128,7 +128,7 @@ def lev_dis(str1, str2):
             </pre>
         </div>
     </main>
-    
+
     <footer>
         &COPY; 2024 Isuru Karunaratna. All rights reserved.
     </footer>
