Changed the title: Code

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     src="https://wikimedia.org/api/rest_v1/media/math/render/svg/d1367dec4582e7b945fcb976bdfe94263263e07e"
                     alt="levenshtein_algorithm">
             </p>
-            <h2>Code</h2>
+            <h2>Code for Levenshtein Distance</h2>
             <pre>
                 <code>
 // JavaScript
