--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ public class Levenshtein {
     public static void main(String[] args) {
         // Small test
         String str1 = "Isuru";
-        String str2 = "Sandumi"; // :)
+        String str2 = "Sandumi";
         int dis = levDis(str1, str2, str1.length(), str2.length());
         System.out.println(dis);
     }
